; ModuleID = '/home/carl/AnghaBench/mpv/ta/extr_ta_utils.c_ta_new_context.c'
source_filename = "/home/carl/AnghaBench/mpv/ta/extr_ta_utils.c_ta_new_context.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@dummy_dtor = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @ta_new_context(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = call i8* @ta_alloc_size(i8* %4, i32 0)
  store i8* %5, i8** %3, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = load i32, i32* @dummy_dtor, align 4
  %8 = call i32 @ta_set_destructor(i8* %6, i32 %7)
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %13, label %10

10:                                               ; preds = %1
  %11 = load i8*, i8** %3, align 8
  %12 = call i32 @ta_free(i8* %11)
  store i8* null, i8** %3, align 8
  br label %13

13:                                               ; preds = %10, %1
  %14 = load i8*, i8** %3, align 8
  ret i8* %14
}

declare dso_local i8* @ta_alloc_size(i8*, i32) #1

declare dso_local i32 @ta_set_destructor(i8*, i32) #1

declare dso_local i32 @ta_free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
